<resources>
    <string name="app_name">Bing Wallpaper</string>

    <string name="mainSnackLoading">(｡•ˇωˇ•｡) Loading</string>
    <string name="mainSnackNetworkError">⚆_⚆ Unable to connect to the internet</string>
    <string name="mainSnackRequestFail">⚆_⚆ Unable to connect to the server</string>
    <string name="mainSnackLoadAllFinish">( ͡° ͜ʖ ͡°) Already load all image data</string>
    <string name="mainSnackPressAgainToExit">(╯ᐛ )╯Double tap back button to exit</string>
    <string name="mainDrawerHeaderHint">٩̋(๑˃́ꇴ˂̀๑) New wallpaper daily</string>
    <string name="mainDrawerSelectionGallery">Gallery</string>
    <string name="mainDrawerSelectionInfo">About</string>
    <string name="mainDrawerSelectionHelp">Help</string>
    <string name="mainDrawerSelectionExit">Exit</string>
    <string name="mainDrawerSelectionWebsite">Visit Website</string>
    <string name="mainDrawerSelectionSetting">Setting</string>
    <string name="mainDrawerSelectionFeedback">Feedback</string>
    <string name="mainFeedbackMailTitle">Android BingImage Feedback : Question Here</string>
    <string name="mainFeedbackMailContentTemple">
        Question : \n\n\n
        Step : \n\n\n
        Result : \n\n\n
    </string>

    <string name="previewMenuScreenResolution">Preview resolution</string>
    <string name="previewResolution1920x1200" translatable="false">1920×1200</string>
    <string name="previewResolution1920x1080" translatable="false">1920×1080</string>
    <string name="previewResolution1366x768" translatable="false">1366×768</string>
    <string name="previewResolution1280x720" translatable="false">1280×720</string>
    <string name="previewResolution1024x768" translatable="false">1024×768</string>
    <string name="previewResolution800x600" translatable="false">800×600</string>
    <string name="previewResolution800x480" translatable="false">800×480</string>
    <string name="previewResolution640x480" translatable="false">640×480</string>
    <string name="previewResolution400x240" translatable="false">400×240</string>
    <string name="previewResolution320x240" translatable="false">320×240</string>
    <string name="previewResolution1080x1920" translatable="false">1080×1920</string>
    <string name="previewResolution768x1366" translatable="false">768×1366</string>
    <string name="previewResolution768x1280" translatable="false">768×1280</string>
    <string name="previewResolution720x1280" translatable="false">720×1080</string>
    <string name="previewResolution480x800" translatable="false">480×800</string>
    <string name="previewResolution480x640" translatable="false">480×640</string>
    <string name="previewResolution240x400" translatable="false">240×400</string>
    <string name="previewResolution240x320" translatable="false">240×320</string>
    <string name="previewResolutionUnknown">Unknown resolution</string>
    <string name="previewDownloadDialogHint">You can long press this button to reopen this dialog</string>
    <string name="previewDownloadDialogCheckbox">Don\'t show again</string>
    <string name="previewDownloadDialogPosButtonText">Download</string>
    <string name="previewDownloadDialogNegButtonText">Cancel</string>
    <string name="previewToastDownload">Downloading …</string>

    <string name="settingTitle">Setting</string>
    <string name="settingBasicCatalog">Basic</string>
    <string name="settingBasicUseOldGalleryTitle">Use old version gallery</string>
    <string name="settingBasicUseOldGalleryContent">Use old version gallery instand of new version（ NOT RECOMMAND ）</string>
    <string name="settingBasicDoubleClickTitle">Double tap to exit</string>
    <string name="settingBasicDoubleClickContent">Double tap back button to exit application</string>
    <string name="settingViewSettingCatalog">View</string>
    <string name="settingViewSettingViewResolutionTitle">List image resolution</string>
    <string name="settingViewSettingViewPreviewTitle">Preview image resolution</string>
    <string name="settingViewSettingViewDownloadTitle">Download image resolution</string>
    <string name="settingViewDownloadHideDownloadDialogTitle">Don\'t show download dialog</string>
    <string name="settingViewDownloadHideDownloadDialogContent">Hide download dialog, you can also turn it on by long press the download button</string>
    <string name="settingOtherCatalog">Other</string>
    <string name="settingOtherClearCacheSizeTitle">Cache maximum size </string>
    <string name="settingOtherClearCacheTitle">Clean cache</string>
    <string name="settingOtherClearCacheContent">Cache size : %sM</string>
    <string name="settingOtherClearCacheHint">Cleaning cache…</string>
    <string name="settingOtherClearCacheContentPrepare">Calculating cache size…</string>
    <string name="settingOtherPermissionDescriptionTitle">Permission description</string>
    <string name="settingOtherPermissionDescriptionContent">Check why we need these permission</string>
    <string name="settingDialogConfirm">OK</string>
    <string name="settingDialogCancel">Cancel</string>
    <string name="settingErrorToast">Error</string>

    <string name="galleryMenuShare">Share</string>
    <string name="galleryMenuDelete">Delete</string>
    <string name="galleryMenuSetAsWallpaper">Set as wallpaper</string>
    <string name="galleryShareTo">Share to …</string>
    <string name="gallerySetWallpaper">Set wallpaper</string>
    <string name="galleryHintFileNotExist">File not exist</string>

    <string name="galleryTitle">Gallery</string>

    <string name="helpTitle">Help</string>

    <string name="infoTitle">About</string>

    <string name="bootFileErrorText">Can not initialize folder, please make sure there are no any file or folder named "BingImage" in your external storage root path and try again.</string>
    <string name="bootPermissionErrorText">Can not get permission,please give us permission and try again</string>
    <string name="bootPermissionErrorButton">Check all permission</string>

    <string name="permissionDescriptionTitle">Permission Description</string>

    <string name="downloadServiceNotificationChannelName">Download Notification</string>
    <string name="downloadServiceNotificationDownloading">Downloading…</string>
    <string name="downloadServiceNotificationDownloadFinish">Download finish, tap to check</string>
    <string name="settingOtherClearCacheDialogCleanComplete">Clean complete</string>
    <string name="randomMenuRefresh">Refresh</string>
    <string name="mainDrawerSelectionRandom">Feels lucky</string>
    <string name="randomTitle">Feels Lucky</string>
    
    <string name="dialogResolutionSelectorHintSupportMultiSelect">请选择要设置的分辨率（支持多选）</string>
    <string name="dialogResolutionSelectorHint">请选择要设置的分辨率</string>
</resources>
