<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            app:showAsAction="never"
            android:title="@string/previewResolution1920x1200"
            android:id="@+id/menuPreviewResolution1920x1200"/>
    <item
            app:showAsAction="never"
            android:title="@string/previewResolution1920x1080"
            android:id="@+id/menuPreviewResolution1920x1080"/>
    <item
            app:showAsAction="never"
            android:title="@string/previewResolution1366x768"
            android:id="@+id/menuPreviewResolution1366x768"/>
    <item
            app:showAsAction="never"
            android:title="@string/previewResolution1280x720"
            android:id="@+id/menuPreviewResolution1280x720"/>
    <item
            app:showAsAction="never"
            android:title="@string/previewResolution1024x768"
            android:id="@+id/menuPreviewResolution1024x768"/>
    <item
            app:showAsAction="never"
            android:title="@string/previewResolution800x600"
            android:id="@+id/menuPreviewResolution800x600"/>
    <item
            app:showAsAction="never"
            android:title="@string/previewResolution800x480"
            android:id="@+id/menuPreviewResolution800x480"/>
    <item
            app:showAsAction="never"
            android:title="@string/previewResolution640x480"
            android:id="@+id/menuPreviewResolution640x480"/>
    <item
            app:showAsAction="never"
            android:title="@string/previewResolution400x240"
            android:id="@+id/menuPreviewResolution400x240"/>
    <item
            app:showAsAction="never"
            android:title="@string/previewResolution320x240"
            android:id="@+id/menuPreviewResolution320x240"/>
    <item
            app:showAsAction="never"
            android:title="@string/previewResolution1080x1920"
            android:id="@+id/menuPreviewResolution1080x1920"/>
    <item
            app:showAsAction="never"
            android:title="@string/previewResolution768x1366"
            android:id="@+id/menuPreviewResolution768x1366"/>
    <item
            app:showAsAction="never"
            android:title="@string/previewResolution768x1280"
            android:id="@+id/menuPreviewResolution768x1200"/>
    <item
            app:showAsAction="never"
            android:title="@string/previewResolution720x1280"
            android:id="@+id/menuPreviewResolution720x1280"/>
    <item
            app:showAsAction="never"
            android:title="@string/previewResolution480x800"
            android:id="@+id/menuPreviewResolution480x800"/>
    <item
            app:showAsAction="never"
            android:title="@string/previewResolution480x640"
            android:id="@+id/menuPreviewResolution480x640"/>
    <item
            app:showAsAction="never"
            android:title="@string/previewResolution240x400"
            android:id="@+id/menuPreviewResolution240x400"/>
    <item
            app:showAsAction="never"
            android:title="@string/previewResolution240x320"
            android:id="@+id/menuPreviewResolution240x320"/>

</menu>