<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            app:showAsAction="always"
            android:title="@string/galleryMenuShare"
            android:icon="@drawable/ic_share_white"
            android:id="@+id/menuGalleryWatchingShare"/>
    <item
            app:showAsAction="always"
            android:title="@string/galleryMenuDelete"
            android:icon="@drawable/ic_delete_white"
            android:id="@+id/menuGalleryWatchingDelete"/>
    <item
            app:showAsAction="always"
            android:title="@string/galleryMenuSetAsWallpaper"
            android:icon="@drawable/ic_wallpaper_white"
            android:id="@+id/menuGalleryWatchingSetAsWallpaper"/>

</menu>